syntax ="proto3";
package genproto;
option go_package ="genproto/book_service";

service BookService{
    rpc Create(CreateBook) returns (BookId){}
    rpc GetAll(GetAllBookRequest) returns (GetAllBookResponse){}
    rpc GetById(BookId) returns (GetBookByIdResponse){}
    rpc Update(UpdateBook) returns (MsgRespons){}
    rpc Delete(BookId) returns (MsgRespons){}
}

message Book{
    string id = 1;
    string name =2;
    string category_id =3;
    string created_at =4;
    string updated_at =5;
}

message CreateBook{
    string name =1;
    string category_id =2;
}

message BookId{
    string id=1;
}

message GetAllBookRequest{
    string name = 1;
    int32 offset =2;
    int32 limit =3;    
}

message GetAllBookResponse{
    repeated Book bookList =1;
    int32 count= 2;
}

message GetBookByIdResponse{
    string id = 1;
    string name =2;
    string category=3;
}

message UpdateBook{
    string id = 1;
    string name =2;
    string category_id =3;
}
message MsgRespons{
    string msg =1;
}