syntax ="proto3";
package genproto;
option go_package ="genproto/book_service";

service BookCategoryService{
    rpc Create(CreateBookCategory) returns (BookCategoryId){}
    rpc GetAll(GetAllBookCategoryRequest) returns (GetAllBookCategoryResponse){}
    rpc GetById(BookCategoryId) returns (BookCategory){}
    rpc Update(BookCategory) returns (MsgResponse){}
    rpc Delete(BookCategoryId) returns (MsgResponse){}
}


message BookCategory{
    string id = 1;
    string name =2;
    string created_at =3;
    string updated_at =4;
}

message CreateBookCategory{
    string name =1;
}

message BookCategoryId{
    string id =1;
}
message GetAllBookCategoryRequest{
    string name = 1;
    int32 offset =2;
    int32 limit =3;
}

message GetAllBookCategoryResponse{
    repeated BookCategory bookcategorylist =1;
    int32 count =2;
}
message MsgResponse{
    string msg =1;
}